--- a/src/components/MovieItem/MovieItem.module.scss
+++ b/src/components/MovieItem/MovieItem.module.scss
@@ -2,9 +2,18 @@
   position: relative;
   display: flex;
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15);
+  @media (max-width: 520px) {
+    padding: 6px 0 0 10px;
+    display: inline-flex;
+  }
 }
 .img {
   flex: 0 0 180px;
+  @media (max-width: 520px) {
+    width: 60px;
+    height: 90px;
+    flex: none;
+  }
   img {
     width: 100%;
     height: 100%;
@@ -16,6 +25,9 @@
   display: flex;
   flex-direction: column;
   row-gap: 7px;
+  @media (max-width: 520px) {
+    padding: 0 0 0 15px;
+  }
 }
 .title {
   padding: 0 20px 0 0;
@@ -73,6 +85,11 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 22px;
+  @media (max-width: 520px) {
+    position: absolute;
+    top: 100px;
+    left: 10px;
+  }
 }
 .rate {
   position: absolute;
