--- a/src/components/MovieItemRated/MovieItemRated.module.scss
+++ b/src/components/MovieItemRated/MovieItemRated.module.scss
@@ -2,9 +2,18 @@
   position: relative;
   display: flex;
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15);
+  @media (max-width: 520px) {
+    padding: 6px 0 0 10px;
+    display: inline-flex;
+  }
 }
 .img {
   flex: 0 0 180px;
+  @media (max-width: 520px) {
+    width: 60px;
+    height: 90px;
+    flex: none;
+  }
   img {
     width: 100%;
     height: 100%;
@@ -16,11 +25,40 @@
   display: flex;
   flex-direction: column;
   row-gap: 7px;
+  @media (max-width: 520px) {
+    padding: 0 0 0 15px;
+  }
 }
 .title {
+  padding: 0 20px 0 0;
   font-size: 20px;
   font-weight: 400;
   line-height: 28px;
+}
+.rating {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #e90000;
+  border-radius: 100%;
+  color: #000;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 22px;
+  &_1 {
+    border-color: #e97e00;
+  }
+  &_2 {
+    border-color: #e9d100;
+  }
+  &_3 {
+    border-color: #66e900;
+  }
 }
 .date {
   color: #827e7e;
@@ -47,6 +85,11 @@
   font-size: 12px;
   font-weight: 400;
   line-height: 22px;
+  @media (max-width: 520px) {
+    position: absolute;
+    top: 100px;
+    left: 10px;
+  }
 }
 .rate {
   position: absolute;
