--- a/src/components/MovieList/MovieList.module.scss
+++ b/src/components/MovieList/MovieList.module.scss
@@ -3,4 +3,7 @@
   gap: 35px;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 280px;
+  @media (max-width: 1000px) {
+    grid-template-columns: none;
+  }
 }
